--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -11,7 +11,7 @@
 
     <p style="font-family:monospace;">
     here's a rapid-fire list of things about me that you didn't ask for!
-    <ul style="list-style-type:square">
+    <ul style="list-style-type:square;font-family:monospace;">
     <li>i'm a first-year student here at CU; my major is CTD and i'm also in the EHP.</li>
     <li>i'm super interested in learning more about web design/development! i think i might want to pursue it as my career path!</li>
     <li>i swim for CU as well as run my own private swim lesson business.</li>
@@ -22,8 +22,10 @@
 
     <p style="font-family:monospace;">
     do you trust me yet? let's find out! try clicking on these two <em>totally</em> safe links...
-    here's me (pre-black diamond ski run)! 
-    here's a YouTube video i like!
+    <ul style="list-style-type:square;font-family:monospace;">
+    <li>here's <a href="../img/me.jpeg">me</a> (pre-black diamond ski run)!</li>
+    <li>here's a <a href="https://www.youtube.com/watch?v=XhYGmMpRtyM">YouTube video</a> i like!</li>
+    </ul>
     </p>
 </body>
 </html>
