--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -21,7 +21,7 @@
     </p>
 
     <p style="font-family:monospace;">
-    do you trust me yet? let's find out! try clicking on these two <em>totally</em> safe links...
+    <b>do you trust me yet?</b> let's find out! try clicking on these two <em>totally</em> safe links...
     <ul style="list-style-type:square;font-family:monospace;">
     <li>here's <a href="../img/me.jpeg">me</a> (pre-black diamond ski run)!</li>
     <li>here's a <a href="https://www.youtube.com/watch?v=XhYGmMpRtyM">YouTube video</a> i like!</li>
