--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <body style="background-color:lavenderblush;"></body>
-    <h2 style="font-family:monospace;">hiii! i'm hailey!</h2>
-    <h4 style="font-family:monospace;"><em>she/her.</em></h4>
+    <h1 style="font-family:monospace;">hiii! i'm hailey!</h1>
+    <h2 style="font-family:monospace;"><em>bay area, ca.</em></h2>
+    <h3 style="font-family:monospace;"><em>she/her.</em></h3>
 
     <p style="font-family:monospace;">
     here's a rapid-fire list of things about me that you didn't ask for!
