--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -11,6 +11,10 @@
     <h3 style="font-family:monospace;"><em>she/her.</em></h3>
     <br>
 
+    <img src="../img/me.jpeg" width="25%" height="auto">
+
+    <br>
+    <br>
     <p style="font-family:monospace;">
     here's a rapid-fire list of things about me that you didn't ask for!
     <ul style="list-style-type:square;font-family:monospace;">
