--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,6 +23,7 @@
         <span> | </span>
         <a href="/html-midterm/page4.html">Page 4</a>
         <span> | </span>
+        <a href="/html-midterm/page5.html">Page 5</a>
     </div>
     
     <table>
@@ -32,21 +33,21 @@
             <th>Other?</th>
         </tr>
         <tr>
-            <td><img src="img/dogsFrolic.png"></td>
-            <td><img src="img/dogSinging.png">
-            <td><img src="img/labLab.png"></td>
-        </tr>
-        <tr>
-            <td><img src="img/boxingCats.png"></td>
-            <img src="img/orangeCat.png">
-            <td><img src="img/sunCat.png"></td>
-        </tr>
-        <tr>
-            <td><img src="img/diamondAlien.png"></td>
-            <img src="img/creature.png"></td>
-            <td><img src="img/aliensPeace.png"></td>
-        </tr>
+            <td><img src="img/dogsFrolic.png" alt="a painting-like image of two dogs frolicking through a field of grass."></td>
+            <td><img src="img/orangeCat.png" alt="a picture of a tabby cat playing with a small ball of yarn."></td>
+            <td><img src="img/diamondAlien.png" alt="a cartoonish image of several aliens fighting each other, with several diamonds floating around them."></td>
 
+        </tr>
+        <tr>
+            <td><img src="img/dogSinging.png" alt="a picture of a dog on a stage with imagery of a globe in the background."></td>
+            <td><img src="img/boxingCats.png" alt="a cartoon image of two cats fighting in a boxing ring."></td>
+            <td><img src="img/creature.png" alt="a depiction of a purple, octopus-like creature."></td>
+        </tr>
+        <tr>
+            <td><img src="img/labLab.png" alt="a picture of a labrador retreiver standing up on a table, surrounded by lab equipment (vials)."></td>
+            <td><img src="img/sunCat.png" alt="a picture of a cat lounging on a couch, lit up by the sun."></td>
+            <td><img src="img/aliensPeace.png" alt="a cartoonish image of two aliens waving their arms, under the light of a UFO."></td>
+        </tr>
     </table>
 
 </body>
