--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport content="width=device-width, initial-scale=1.0">
-    <title>what i changed! (web html midterm)</title>
+    <title>what i changed!</title>
+    <style>
+        .navbar{
+            background-color:rgb(253,223,196);
+            padding:20px;
+            text-align:right;
+        }
+        body{
+            background-color:rgb(255,246,232);
+            padding-left:30px;padding-right:30px;
+        }
+        h1,h2,ul,a{
+            font-family:monospace;
+            line-height:20px;
+        }
+        h1,h2{
+            padding:20px;
+        }
+    </style>
 </head>
 <body>
-
     <div class="navbar">
         <a href="/html-midterm/page1.html">page 1</a>
         <span> | </span>
@@ -19,7 +36,6 @@
         <span> | </span>
         <a href="/html-midterm/page5.html">page 5</a>
     </div>
-
     <h1>html midterm - changelog</h1>
 
     <h2>page 1...</h2>
