--- a/html-midterm/page1.html
+++ b/html-midterm/page1.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body{
             text-align: center;
@@ -71,7 +74,7 @@
     But my vibe remained unchecked—and my day was already wrecked—
     So the only word I said was the whispered word, “Anymore?”
     As I whispered, a tarot reader with no hashtags replied, “There’s more!”—
-    Just manifest for sure.<p>
+    Just manifest for sure.</p>
 
     <p>On my back in my room laying—a girl-boss gatekeeper intent on slaying—
     Asked me to get ready with her from her closet door,
