--- a/html-midterm/page3.html
+++ b/html-midterm/page3.html
@@ -63,6 +63,7 @@
         This is called a "header row".
     </p>
     <table>
+        <caption>People and Their Ages</caption>
         <tr>
             <th>First name</th>
             <th>Last name</th>
