--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -26,6 +26,7 @@
     </div>
     
     <table>
+        <caption>Dogs, Cats, and Other Things?!?</caption>
         <tr>
             <th>Dogs</th>
             <th>Cats</th>
