--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -40,10 +40,12 @@
 
     <h2>page 1...</h2>
         <ul> 
+            <li>metadata is missing from the head tag; i included the proper contents.</li>
             <li>i added a "!DOCTYPE" tag to the beginning of the file, as it was not included as it should have been before the "head" tag.</li>
             <li>an "em" tag was not followed by a correct closing tag within the phrase "crème fraiche" in one of the page's paragraphs, which was causing text formatting issues. i fixed this error by inserting the correct closing tag.</li>
             <li>within the three title lines for the page, i noticed that an h3 element was seen before an h2 element, and also that the date was ordered as an h1 element. therefore, i made the following changes: "Edgar Allan Poe..." denoted with h1, "by Jamie Cricks" denoted with h2, and "January 19, 2023" denoted with p so that an h3 element does not precede an h1 or h2 element.</li>
             <li>the page itself is not encompassed within an "html" tag (which also denotes the language of the page), so i made sure to add it in.
+            <li>one of the "p" tags is missing a closing tag, with a slash, so i included that on line 74.
         </ul>
 
     <h2>page 2...</h2>
@@ -59,6 +61,8 @@
     
     <h2>page 3...</h2>
         <ul> 
+            <li>considering accessibility, a table caption is missing; i added in my own for this purpose.</li> 
+            <li>there was a header cell in row 3 that was missing, as well as cells out of place, so i re-arranged those for proper formatting purposes.</li>
             <li>the bullet point that says "a column is usually identified by a name;" was not correctly surrounded by "li" tags, so i corrected that error.</li>
             <li>within the table, the phrase "Lily" was not correctly encompassed with the "td" tags, so i made that correction.</li>
             <li>the name "Zapata" is meant to be table data, not a table header, so i made that change accordingly to the html code.</li>
@@ -67,6 +71,7 @@
 
     <h2>page 4...</h2>
         <ul> 
+            <li>considering accessibility, a table caption is missing; i added in my own for this purpose.</li> 
             <li>a "!DOCTYPE" tag was missing at the beginning of the code sequence, so i made sure to include that.</li>
             <li>ALL of the images are missing an alt attribute, so i made my own for each image to account for this error.</li>
             <li>the "orange cat" and "creature" are both missing the "td" tag surrounding them, so i added these in.</li>
