--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -26,15 +26,15 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/html-midterm/page1.html">page 1</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page1">page 1</a>
         <span> | </span>
-        <a href="/html-midterm/page2.html">page 2</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page2">page 2</a>
         <span> | </span>
-        <a href="/html-midterm/page3.html">page 3</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page3">page 3</a>
         <span> | </span>
-        <a href="/html-midterm/page4.html">page 4</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page4">page 4</a>
         <span> | </span>
-        <a href="/html-midterm/page5.html">page 5</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page5">page 5</a>
     </div>
     <h1>html midterm - changelog</h1>
 
