--- a/html-midterm/page3.html
+++ b/html-midterm/page3.html
@@ -16,15 +16,15 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/html-midterm/page1.html">Page 1</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page1">page 1</a>
         <span> | </span>
-        <a href="/html-midterm/page2.html">Page 2</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page2">page 2</a>
         <span> | </span>
-        <a href="/html-midterm/page3.html">Page 3</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page3">page 3</a>
         <span> | </span>
-        <a href="/html-midterm/page4.html">Page 4</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page4">page 4</a>
         <span> | </span>
-        <a href="/html-midterm/page5.html">Page 5</a>
+        <a href="https://haileyu.github.io/haileyu/html-midterm/page5">page 5</a>
     </div>
     
     <a href="https://en.wikipedia.org/wiki/Table_(information)">Source page</a>
