--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -25,5 +25,23 @@
       <p>Editing, writing, and web development services</p>
     </footer>
   </section>
+  <section class="card2">
+    <header class="card_header2">
+      <h2>hailey usher</h2>
+    </header>
+    <article class="card_article2">
+      <img class="card_article_img" src="../img/me.jpeg" alt="A picture of me in snow gear!">
+      <p class="card_article_text2">2510 kittridge loop road.<br>
+         andrews hall, east.<br>
+         cu boulder.<br>
+         CO<br>
+         80310<br>
+        <strong>tel</strong>: 925 683 7103<br>
+        <strong>mail</strong>: haileyausher@gmail.com</p>
+    </article>
+    <footer class="card_footer2">
+      <p>atlas undergraduate student! :-)</p>
+    </footer>
+  </section>
   </body>
 </html>
