--- a/html-midterm/page2.html
+++ b/html-midterm/page2.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/html-midterm/page1.html">Page 1</a>
+        <a href="../html-midterm/page1.html">page 1</a>
         <span> | </span>
-        <a href="/html-midterm/page2.html">Page 2</a>
+        <a href="../html-midterm/page2.html">page 2</a>
         <span> | </span>
-        <a href="/html-midterm/page3.html">Page 3</a>
+        <a href="../html-midterm/page3.html">page 3</a>
         <span> | </span>
-        <a href="/html-midterm/page4.html">Page 4</a>
+        <a href="../html-midterm/page4.html">page 4</a>
         <span> | </span>
-        <a href="/html-midterm/page5.html">Page 5</a>
+        <a href="../html-midterm/page5.html">page 5</a>
     </div>
 
     <a href="https://en.wikipedia.org/wiki/New_Beehive_Inn">Source Page</a>
