--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport content="width=device-width, initial-scale=1.0">
-    <title>what i changed!</title>
+    <meta name="viewport" content="width-device-width">
     <style>
         .navbar{
             background-color:rgb(253,223,196);
@@ -23,6 +22,7 @@
             padding:20px;
         }
     </style>
+    <title>what i changed!</title>
 </head>
 <body>
     <div class="navbar">
