--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -7,11 +7,7 @@
     <link href="../css/hu-wa5.css" rel="stylesheet">
 </head>
   <body>
-    <center>
-    <p>hi!<br>
-    here's a snippet from the 2020 summer olympics, held in tokyo.<br>
-    i have highlighted an event from swimming: the men's 100m freestyle finals.<br><br>
-    <em>check it out!</em></p>
-    </center>
+    <img src="../img/tokyo-logo.png" class="logo"/>
+    <p class="score">M 100M FREE FINAL</p>
   </body>
 </html>
