--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -7,7 +7,14 @@
     <link href="../css/hu-wa5.css" rel="stylesheet">
 </head>
   <body>
-    <img src="../img/tokyo-logo.png" class="logo"/>
-    <p class="score">M 100M FREE FINAL</p>
+    <div class="logo">
+      <img src="../img/tokyo-logo.png" alt="a lo">
+    </div>
+      <div class="event">
+      <p>M 100M FREE FINAL</p>
+    </div>
+    <div class="caption">
+      <p>CALEB DRESSEL WINS GOLD!!! | CALEB DRESSEL WINS GOLD!!! | CALEB DRESSEL WINS GOLD!!! | CALEB DRESSEL WINS GOLD!!! | CALEB DRESSEL WINS GOLD!!! | CALEB DRESSEL WINS GOLD!!!</p>
+    </div>
   </body>
 </html>
