--- a/wa/wa6.html
+++ b/wa/wa6.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Layout Task</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="../css/hu-wa6.css" rel="stylesheet" type="text/css">
   </head>
 
 <body>
 
   <div class="logo">
-    My exciting website!
+    My Exciting Website!
   </div>
 
   <nav>
@@ -22,10 +22,10 @@
         <a href="">Blog</a>
       </li>
       <li>
-        <a href="">About us</a>
+        <a href="">About Us</a>
       </li>
       <li>
-        <a href="">Our history</a>
+        <a href="">Our History</a>
       </li>
       <li>
         <a href="">Contacts</a>
@@ -34,11 +34,11 @@
   </nav>
 
   <main class="grid">
-    <article>
+    <article class="child1">
       <h1>
         An Exciting Blog Post
       </h1>
-      <img src="images/balloon-sq6.jpg" alt="placeholder" class="feature">
+      <img src="../img/balloon-sq6.jpg" alt="placeholder" class="feature">
       <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
         azuki bean garlic.</p>
 
@@ -57,28 +57,27 @@
 
       <p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle
         seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
-
     </article>
 
-    <aside>
+    <aside class="child2">
       <h2>
         Photography
       </h2>
       <ul class="photos">
         <li>
-          <img src="images/balloon-sq1.jpg" alt="placeholder">
+          <img src="../img/balloon-sq1.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq2.jpg" alt="placeholder">
+          <img src="../img/balloon-sq2.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq3.jpg" alt="placeholder">
+          <img src="../img/balloon-sq3.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq4.jpg" alt="placeholder">
+          <img src="../img/balloon-sq4.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq5.jpg" alt="placeholder">
+          <img src="../img/balloon-sq5.jpg" alt="placeholder">
         </li>
       </ul>
 
