--- a/wa/wa6.html
+++ b/wa/wa6.html
@@ -6,13 +6,10 @@
     <title>Layout Task</title>
     <link href="../css/hu-wa6.css" rel="stylesheet" type="text/css">
   </head>
-
 <body>
-
   <div class="logo">
     My Exciting Website!
   </div>
-
   <nav>
     <ul>
       <li>
@@ -32,58 +29,49 @@
       </li>
     </ul>
   </nav>
-
   <main class="grid">
     <article class="child1">
       <h1>
         An Exciting Blog Post
       </h1>
-      <img src="../img/balloon-sq6.jpg" alt="placeholder" class="feature">
+      <img src="../img/balloon-sq6.jpg" alt="An image of a singular hot air balloon." class="feature">
       <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
         azuki bean garlic.</p>
-
       <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens
         dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
-
       <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon
         napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko.
         Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram
         corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress.
         Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.</p>
-
       <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie
         turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki
         bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.</p>
-
       <p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle
         seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
     </article>
-
     <aside class="child2">
       <h2>
         Photography
       </h2>
       <ul class="photos">
         <li>
-          <img src="../img/balloon-sq1.jpg" alt="placeholder">
+          <img src="../img/balloon-sq1.jpg" alt="An image of several hot air balloons.">
         </li>
         <li>
-          <img src="../img/balloon-sq2.jpg" alt="placeholder">
+          <img src="../img/balloon-sq2.jpg" alt="An image of several hot air balloons.">
         </li>
         <li>
-          <img src="../img/balloon-sq3.jpg" alt="placeholder">
+          <img src="../img/balloon-sq3.jpg" alt="An image of several hot air balloons.">
         </li>
         <li>
-          <img src="../img/balloon-sq4.jpg" alt="placeholder">
+          <img src="../img/balloon-sq4.jpg" alt="An image of a singular hot air balloon.">
         </li>
         <li>
-          <img src="../img/balloon-sq5.jpg" alt="placeholder">
+          <img src="../img/balloon-sq5.jpg" alt="An image of a singular hot air balloon.">
         </li>
       </ul>
-
     </aside>
   </main>
-
 </body>
-
 </html>
