--- a/wa/wa7.html
+++ b/wa/wa7.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/hu-wa7.css">
-    <title>Dance Like Nav</title>
+    <title>Virtual Flower Garden | Home</title>
 </head>
 <body>
     <div id="title">
@@ -23,8 +23,8 @@
         <a><b>More</b></a>
     </nav>
     <div id="flower">
-        <img src="../img/flowerbud.jpg">
-        <img src="../img/flowergrown.jpg" class="top">
+        <img src="../img/bloom1.png" id="bottom">
+        <img src="../img/bloom2.png" id="top">
     </div>
 </body>
 </html>
