--- a/wa/wa7.html
+++ b/wa/wa7.html
@@ -23,8 +23,8 @@
         <a><b>More</b></a>
     </nav>
     <div id="flower">
-        <img src="../img/bloom1.png" id="bottom">
-        <img src="../img/bloom2.png" id="top">
+        <img src="../img/bloom1.png" id="bottom" alt="A blooming flower.">
+        <img src="../img/bloom2.png" id="top" alt="A fully bloomed flower!">
     </div>
 </body>
 </html>
