--- a/css-midterm/index.html
+++ b/css-midterm/index.html
@@ -16,6 +16,7 @@
         <h1>&#128075 hi, i'm hailey usher!</h1>
       </div>
       <div>
+        <!--wave animation inspired by Arjun Gautam on Youtube (link: https://www.youtube.com/watch?v=2dPISFndyKg). i used the path for my own purposes but everything else was made up by me to fit my own needs.-->
         <svg class="waves" viewBox="0 25 150 30" preserveAspectRatio="none" shape-rendering="auto">
           <defs>
             <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
