--- a/index.html
+++ b/index.html
@@ -1,7 +1,65 @@
-<html>
-    <head></head>
-    <body>
-        <p>Hello, World!</p>
-        <p>My name is Hailey!</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>this is hailey usher</title>
+    <link rel="stylesheet" href="../css-midterm/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div class="header">
+      <div class="header-inside flex-property">
+        <h1>&#128075; hi, i'm hailey usher!</h1>
+      </div>
+      <div>
+        <!--wave animation inspired by Arjun Gautam on Youtube (link: https://www.youtube.com/watch?v=2dPISFndyKg). i used the path for my own purposes but everything else was made up by me to fit my own needs.-->
+        <svg class="waves" viewBox="0 25 150 30" preserveAspectRatio="none" shape-rendering="auto">
+          <defs>
+            <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
+          </defs>
+          <g class="wave-move">
+            <use xlink:href="#wave-path" x="48" y="5" fill="rgba(255,255,255,.2)"/>
+            <use xlink:href="#wave-path" x="48" y="7" fill="white" />
+          </g>
+        </svg>
+      </div>
+    </div>
+
+    <div class="flex-property">
+      <div class="web-content flex-property">
+        <p>i'm...</p>
+        <ul>
+          <li>from the bay area, ca.</li>
+          <li>a freshman at <a href="https://www.colorado.edu/">cu boulder</a>.</li>
+          <li>majoring in <a href="https://www.colorado.edu/engineering/academics/degree-programs/creative-technology-design">creative tech. & design</a>, and minoring in <a href="https://www.colorado.edu/emp/">engineering management</a>.</li>
+          <li>a member of cu's <a href="https://cuengineeringhonors.com/">honors program</a>, <a href="https://www.colorado.edu/business/oda/women-business-programs-leeds/business-engineering-women-technology">BEWiT</a>, and <a href="https://cuboulderswe.wordpress.com/">SWE</a>.</li>
+          <li>estatic about art, design, coding, and anything else creative! &#128171;</li> 
+          <li>addicted to caffeine, preferably philz coffee.</li>
+          </ul>
+          <p>check out some of my recent creative works, below!</p>
+      </div>
+
+      <div class="portfolio-carousel">
+        <img class="carousel-img" src="../css-midterm/billiard.jpg" alt="a colored pencil piece of a couple hugging each other.">
+        <img class="carousel-img" src="../css-midterm/boise.jpg" alt="an acrylic painting of a girl holding up a cup in front of a graffiti wall.">
+        <img class="carousel-img" src="../css-midterm/heels.png" alt="a photograph of high heels.">
+        <img class="carousel-img" src="../css-midterm/advertisement.png" alt="a word-based design surrounding digital privacy.">
+        <img class="carousel-img" src="../css-midterm/lavhaze.png" alt="a photograph of a girl with a galaxy overlay.">
+        <img class="carousel-img" src="../css-midterm/magcover.jpg" alt="a design of a magazine cover.">
+        <img class="carousel-img" src="../css-midterm/moon.png" alt="a photograph of hands holding a miniature moon.">
+        <img class="carousel-img" src="../css-midterm/rainbow.png" alt="a photograph of a guitar player with a multi-colored overlay.">
+        <img class="carousel-img" src="../css-midterm/rings.png" alt="a photograph of a pair of rings hanging on a silver chain.">
+        <img class="carousel-img" src="../css-midterm/selfportrait.jpg" alt="a digital self-portrait drawing.">
+        <img class="carousel-img" src="../css-midterm/boat.png" alt="a digital mock-up of a self-autonomous boat design.">
+        <img class="carousel-img" src="../css-midterm/locket.png" alt="a photograph of a girl putting a necklace on another girl.">
+        <img class="carousel-img" src="../css-midterm/healing.png" alt="a black and white photograph of a girl holding her hands in a heart shape.">
+        <img class="carousel-img" src="../css-midterm/feeling.png" alt="a digital drawing of a colorful, abstract shape.">
+        <img class="carousel-img" src="../css-midterm/dancing.png" alt="a photograph of two girls dancing in a room.">
+      </div>
+    </div>
+  </body>
 </html>
