--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <li>estatic about art, design, coding, and anything else creative! &#128171;</li> 
           <li>addicted to caffeine, preferably philz coffee.</li>
           </ul>
-          <p>check out some of my recent creative works, below!</p>
+          <p><em>p.s. here's my <a href="https://github.com/haileyu/haileyu">github</a> link!</em></p>
+          <p>also, check out some of my recent creative works below!</p>
       </div>
 
       <div class="portfolio-carousel">
